--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Learn About Me</title>
+    <title>demo</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link href="/stylesheets/style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <div class="navbar navbar-default navbar-static-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/">Learn About Me</a>
+                <a class="navbar-brand" href="/">Demo</a>
             </div>
             <!-- 
                 如果用户已经登陆了则对导航条进行相应的改变。
@@ -22,10 +23,10 @@
                             Hello, <%= currentUser.name() %>
                         </a>
                     </li>
-                    <li><a href="/logout">Log out</a></li>
+                    <li><a href="/logout">退出</a></li>
                  <% } else { %>
-                    <li><a href="/login">Log in</a></li>
-                    <li><a href="/signup">Sign up</a></li>  
+                    <li><a href="/login">登录</a></li>
+                    <li><a href="/signup">注册</a></li>  
                  <% } %>   
             </ul>
         </div>
