--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,8 +1,16 @@
 <% include _header %>
-<h1>Edit your profile</h1>
-<form action="/edit" method="post">
-<input name="displayname" type="text" class="form-control" placeholder="Display name" value="<%= currentUser.displayName || "" %>">
-<textarea name="bio" class="form-control" placeholder="Tell us about yourself!"> <%= currentUser.bio || "" %></textarea>
-<input type="submit" value="Update" class="btn btn-primary btn-block">
-</form>
+<div class="edit">
+    <h1>编辑信息</h1>
+    <form action="/edit" method="post" class="form-inline">
+      <div class="form-group">
+          <label for="name">姓名</label>
+          <input id="name" name="displayname" type="text" class="form-control" placeholder="Display name" value="<%= currentUser.displayName || "" %>">
+      </div>
+      <div class="form-group">
+        描述：
+          <textarea id="bio" name="bio" class="form-control" placeholder="Tell us about yourself!"> <%= currentUser.bio || "" %></textarea>
+      </div>
+    <input type="submit" value="Update" class="btn btn-primary btn-block">
+    </form>
+</div>
 <% include _footer %>
