--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,10 @@
 <% include _header %>
-<h1>Log in</h1>
-<form action="/login" method="post">
-    <input name="username" type="text" class="form-control" placeholder="Username" required autofocus>
-    <input name="password" type="password" class="form-control" placeholder="Password" required>
-    <input type="submit" value="Log in" class="btn btn-primary btn-block">
-</form>
+<div class="login">
+        <h1>登录</h1>
+        <form action="/login" method="post">
+            <input name="username" type="text" class="form-control" placeholder="Username" required autofocus>
+            <input name="password" type="password" class="form-control" placeholder="Password" required>
+            <input type="submit" value="登录" class="btn btn-primary btn-block">
+        </form>
+</div>
 <% include _footer %>
