--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,11 +3,37 @@
     参考变量currentUser来判断你的登陆状态。不过现在它总会是false状态
  -->
 <% if ((currentUser) && (currentUser.id === user.id)) { %>
-    <a href="/edit" class="pull-right">Edit your profile</a>
+    <a href="/edit" class="pull-right">编辑</a>
 <% } %>
-<h1><%= user.name() %></h1>
-<h2>Joined on <%= user.createdAt %></h2>
+<h4>个人资料</h4>
+
+<table class="table table-bordered">
+        <thead>
+        <tr>
+            <th>姓名</th>
+            <th>加入时间</th>
+            <th>描述</th>
+        </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                        <%= user.name() %>
+                </td>
+                <td>
+                        <%= user.createdAt %>
+                </td>
+                <td>
+                        <% if (user.bio) { %>
+                            <%= user.bio %>
+                        <% } %>
+                </td>
+            </tr>
+        </tbody>
+</table>
+<!-- <h2>姓名： <%= user.name() %></h2>
+<h3>加入时间： <%= user.createdAt %></h2>
 <% if (user.bio) { %>
-    <p><%= user.bio %></p>
-<% } %>
+    <h4><%= user.bio %></h4>
+<% } %> -->
 <% include _footer %>
