--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,8 +1,11 @@
 <% include _header %>
-<h1>Sign up</h1>
-<form action="/signup" method="post">
-    <input name="username" type="text" class="form-control" placeholder="Username" required autofocus>
-    <input name="password" type="password" class="form-control" placeholder="Password" required>
-    <input type="submit" value="Sign up" class="btn btn-primary btn-block">
-</form>
+<div class="signup">
+        <h1>注册</h1>
+        <form action="/signup" method="post">
+            <input name="username" type="text" class="form-control" placeholder="Username" required autofocus>
+            <input name="password" type="password" class="form-control" placeholder="Password" required>
+            <input type="submit" value="注册" class="btn btn-primary btn-block">
+        </form>
+</div>
+
 <% include _footer %>
