--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,8 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<div style="background-color:#251d17;;height:100%;color:rgb(167, 196, 196);">
+
+  <h1 style="text-align:center"><%= message %></h1>
+  <h1 style="text-align:center"><%= error.status %></h2>
+  <pre><%= error.stack %></pre>
+
+</div>
+
